--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
