--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+      "ext-calendar": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
